--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -1,11 +1,11 @@
-body {
-  background-color: black;
-}
-
 julioStyle {
   background-color: yellow;
 }
 
 .toDoInput {
   text-align: left!important;
+}
+
+#divCreateTodo {
+  margin-bottom: 20px !important;
 }
