--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -13,3 +13,23 @@ h3
   padding-left: 20px;
   padding-top: 20px;
 }
+.title{
+  height: 230px;
+}
+.content{
+  height: 200px;
+}
+.pt-6{
+  padding-top: 5rem;
+  padding-right: 20px;
+}
+p{
+  color: black;
+}
+.icon{
+  width: 10px;
+  height: 10px;
+}
+.content:hover {
+    filter: brightness(85%);
+}
