--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -17,7 +17,7 @@ h3
   height: 230px;
 }
 .content{
-  height: 200px;
+  height: 300px;
 }
 .pt-6{
   padding-top: 5rem;
@@ -32,4 +32,9 @@ p{
 }
 .content:hover {
     filter: brightness(85%);
+}
+.text{
+  font-size: 60px;;
+  color: black;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
