Updated the part regarding the to do list, small change to header (need jquery.cookies)

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -38,3 +38,11 @@ p{
   color: black;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.underTit {
+  font-size: 20px;
+}
+
+.customListCont {
+  border-radius: 5px;
+}
