--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header a:hover {
 .index-login-login {
     width: 50%;
     margin-top: 80px;
-    background-color: #2c2c2c;
+    background-color: #adadad;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
