--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,11 @@
-* {
+/** {
     margin: 0;
     padding: 0;
-}
+}*/
 
 .wrapper {
     width: 900px;
     margin: 0 auto;
-}
-
-p {
-    font-size: 16px;
-    font-family: Roboto;
-    color: #fff;
-    line-height: 24px;
 }
 
 h4 {
